# structui

./: .gitignore  .structui_schema.yaml  README.md  pyproject.toml  structui.py
.agent/rules/: specify-rules.md
.github/workflows/: ci.yml  gh-pages.yml  publish.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
docs/: ROADMAP.md
examples/: embedded_designer.py
specs/001-docs-site/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docs-site/checklists/: requirements.md
specs/001-xml-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-xml-support/checklists/: requirements.md
src/structui/: __init__.py  app.py  cli.py  file_picker.py  parser.py  schema.py  state.py  ui.py  xml_parser.py
tests/: README.md  test_app.py  test_cli.py  test_cli_entry.py  test_coverage_boost.py  test_file_picker.py  test_final_gap.py  test_parser.py  test_schema.py  test_state.py  test_ui.py  test_ui_extra.py  test_xml_parser.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: api.md  architecture.md  embedding.md  intro.md
website/src/pages/: index.tsx
